<resources>
    <string name="Custom">Custom</string>
    <string name="monochrome">Monochrome</string>
    <string name="clamshell">Clam Shell</string>
    <string name="prefsScaleLines">Line Width</string>
    <string name="version">Version: </string>
    <string name="author">Author:</string>
    <string name="help">anDGS is a client to play Go (Igo, Weiqi, Baduk) on the web site DragonGoServer.net and a local game editor. Every view has context help via the Android menu button.</string>
    <string name="prefsButton">Prefs</string>
    <string name="playButton">Check for moves</string>
    <string name="prefsTitle">Please enter your DGS user name and password, and set other preferences.</string>
    <string name="prefsUser">User Name: </string>
    <string name="prefsServerURL">Server URL: </string>
    <string name="prefsPassword">Password: </string>
    <string name="doneButton">Done</string>
    <string name="returnButton">Return</string>
    <string name="cancelButton">Cancel</string>
    <string name="playTitle">Make a move </string>
    <string name="blankButton" translatable="false"> </string>
    <string name="skipAllButton">Skip All</string>
    <string name="skipButton">Skip</string>
    <string name="unzoomButton">&lt;&gt;</string>
    <string name="undoButton">Undo</string>
    <string name="okButton">Submit</string>
    <string name="LoggingOn">Logging on to DGS&#8230;</string>
    <string name="GettingGame">Getting Game&#8230;</string>
    <string name="NoGamesWaiting">No Games waiting</string>
    <string name="SelectCancel"> select Cancel</string>
    <string name="back">&lt;</string>
    <string name="forward">&gt;</string>
    <string name="first">&lt;&lt;</string>
    <string name="last">&gt;&gt;</string>
    <string name="down">V</string>
    <string name="up">A</string>
    <string name="blank5" translatable="false"> </string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="savedGame">Saved Game Files</string>
    <string name="newGame">New Game</string>
    <string name="Handicap">Handicap</string>
    <string name="Komi">Komi</string>
    <string name="GameSize">Game Size</string>
    <string name="WhitePlayerName">White Player Name:</string>
    <string name="white">white</string>
    <string name="BlackPlayerName">Black Player Name:</string>
    <string name="black">black</string>
    <string name="game">game</string>
    <string name="SGFSaveFileName">SGF Save File Name:</string>
    <string name="CreateGame">Create Game</string>
    <string name="SetSGFFile">Set SGF File</string>
    <string name="EnterFile">Please Enter the file to save SGF</string>
    <string name="Ok">OK</string>
    <string name="SetWhitePlayerName">Set White Player Name</string>
    <string name="SetBlackPlayerName">Set Black Player Name</string>
    <string name="EnterName">Please Enter a name</string>
    <string name="SetDGSGameNumber">Set DGS Game Number</string>
    <string name="EnterNumber">Please Enter a number</string>
    <string name="FileExists">File Exists</string>
    <string name="OpenFile">Do you want to open that file?</string>
    <string name="UseOldorNew">Use old file or create a new file?</string>
    <string name="SaveChangeCancel">Save, Change then Save, or Cancel</string>
    <string name="UnsavedChanges">Unsaved Changes</string>
    <string name="RecoverOrNew">Do you want to recover unsaved game or continue with new?</string>
    <string name="Old">Old</string>
    <string name="New">New</string>
    <string name="Recover">Recover</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="downLoadGame">Download Game</string>
    <string name="up_one_level">..</string>
    <string name="current_dir">.</string>
    <string name="sgf_root_dir">sgfs</string>
    <string name="recover_game">Recover Game</string>
    <string name="selectlayout">Select Layout</string>
    <string name="MakeDirectoryFailed">Make directory failed </string>
    <string name="SaveRecoveryFailed">Save recovery failed </string>
    <string name="RecoveryNotDeleted">Recovery file not deleted </string>
    <string name="CloseFailed">Close file failed </string>
    <string name="SaveSGFFailed">Save SGF failed </string>
    <string name="NotFound"> not found </string>
    <string name="Help">Help</string>
    <string name="Pass">Pass</string>
    <string name="Preferences">Preferences</string>
    <string name="Credits">Credits</string>
    <string name="playOptsTitle">Options for the game editor</string>
    <string name="selectPlayMode">Mode</string>
    <string name="Options">Options</string>
    <string name="markUpTitle">Set Markup value for this node.</string>
    <string name="NoFiles">No files in directory</string>
    <string name="dcTitle">Dragon Go Server Client</string>
    <string name="Status">Status</string>
    <string name="DGSClient">DGS Client</string>
    <string name="AutoPlay">autoplay</string>
    <string name="prefsNotifierInterval">Notifier Interval:\n(seconds) </string>
    <string name="NotifierSound">Notifier Sound</string>
    <string name="StartNotifier">Start Notifier</string>
    <string name="StopNotifier">Stop Notifier</string>
    <string name="Games">Games</string>
    <string name="Messages">Messages</string>
    <string name="Waiting">Waiting</string>
    <string name="GettingMsg">Getting Message&#8230;</string>
    <string name="GettingStatus">Getting Status&#8230;</string>
    <string name="Resign">Resign</string>
    <string name="GameInfo">Game Info</string>
    <string name="NotifierVibrate">Notifier Vibrate</string>
    <string name="TwoPasses">2 Pass moves, Use browser to score</string>
    <string name="WhitePlayer">White Player</string>
    <string name="BlackPlayer">Black Player</string>
    <string name="Rules">Rules</string>
    <string name="Date">Date</string>
    <string name="Overtime">Overtime</string>
    <string name="TimeLeft">Time Left</string>
    <string name="Result">Result</string>
    <string name="Nothing">Nothing</string>
    <string name="portrait">portrait</string>
    <string name="landscape">landscape</string>
    <string name="none">none</string>
    <string name="deflt">Default</string>
    <string name="stone">Stone</string>
    <string name="NotifyAllDetails">Notify All Details</string>
    <string name="NotifyPermanent">Permanent Notification</string>
	<string name="dynamic">Dynamic</string>
    <string name="LogonFailed">Logon Failed</string>
    <string name="autoPlayInterval">Auto Play Interval: </string>
    <string name="autoplay">auto play</string>
    <string name="AutoPlayPause">Auto Play Pause</string>
    <string name="AutoPlaySound">Auto Play Sound</string>
    <string name="browse">browse</string>
    <string name="edit">edit</string>
    <string name="markup">markup</string>
    <string name="stop">X</string>
    <string name="go">O</string>
    <string name="retrn">&#35;</string>
    <string name="AutoClient">Auto Client</string>
    <string name="grinderTitle">Review Games</string>
    <string name="browseButton">Browse</string>
    <string name="selectDirOrFile">Select Directory or File:</string>
    <string name="selectOrEnterDir">Select or Enter Directory</string>
    <string name="select">Select</string>
    <string name="enter">Enter</string>
    <string name="BadGameInfo">Bad Game Information!</string>
    <string name="markUpLabel">Label:</string>
    <string name="None">None:</string>
    <string name="Mark">Mark:</string>
    <string name="Triangle">Triangle:</string>
    <string name="Circle">Circle:</string>
    <string name="Square">Square:</string>
    <string name="WhiteTerritory">White Territory:</string>
    <string name="BlackTerritory">Black Territory:</string>
    <string name="AddEmpty">Add Empty:</string>
    <string name="AddWhite">Add White:</string>
    <string name="AddBlack">Add Black:</string>
    <string name="SetHandicap">Use browser to set Handicap</string>
    <string name="IllegalMove">Illegal Move</string>
    <string name="CreateVariation">Create variation</string>
    <string name="ReplaceOneMove">Replace one move</string>
    <string name="ReplaceAllMoves">Replace all moves</string>
    <string name="MoveControl">Move Control</string>
    <string name="Zoom7x7">Zoom 7x7</string>
    <string name="Zoom9x9">Zoom 9x9</string>
    <string name="Zoom11x11">Zoom 11x11</string>
    <string name="Zoom13x13">Zoom 13x13</string>
    <string name="Dpad">D-Pad</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Tutorial">Tutorial</string>
    <string name="GoToTutorial">The tutorial on how to play is on the website PlayGo.to and requires a flash player. \n 
Do you want to start a browser and go there.</string>
	<string name="SupportApp">Support anDGS</string>
	<string name="SetPreference">Set Preference</string>
	<string name="guessmove">guess move</string>
	<string name="correct">correct</string>
	<string name="incorrect">incorrect</string>
	<string name="next">Continue</string>
	<string name="start">Start</string>
	<string name="EmptyStatus">No waiting messages or games</string>
	<string name="Failed">Connection Failed, result:</string>
	<string name="Comment">Comment</string>
	<string name="EditComment">Enter or edit your comment</string>
	<string name="inviteTitle">Invite a user to a game</string>
	<string name="DownloadOrInvite">Download, Invite or Message</string>
	<string name="InviteUser">Invite User</string>
	<string name="MessageUser">Message User</string>
	<string name="runningGames">Running Games</string>
	<string name="teamGames">Team Games</string>
	<string name="finishedGames">Finished Games</string>
	<string name="NoGames">No Games in list</string>
	<string name="selectBoardSize">Board Size:</string>
	<string name="selectGameType">Game Type:</string>
	<string name="selectYourColor">Your Color:</string>
	<string name="selectHandicap">Handicap:</string>
	<string name="specifyKomi">Komi:</string>
	<string name="specifyMainTime">Main Time:</string>
	<string name="selectMainTimeUnits">Main Time Units:</string>
	<string name="specifyFischerTime">Fischer Time:</string>
	<string name="selectFisherTimeUnits">Fisher Time Units:</string>
	<string name="weekendClock">Weekend Clock:</string>
	<string name="ratedGame">Rated Game:</string>
	<string name="UserId">UserId:</string>
	<string name="Uid">Uid:</string>
    <string name="UserName">User Name:</string>
    <string name="findUserTitle">Find a user by UserId or User Name</string>
    <string name="Japanese">Japanese</string>
    <string name="Chinese">Chinese</string>
    <string name="selectRules">Rules:</string>
	<string name="messageId">Message Id:</string>
	<string name="message">Message:</string>
	<string name="conventionalGame">Conventional</string>
	<string name="properGame">Proper</string>
	<string name="manualGame">Manual</string>
	<string name="doubleGame">Double</string>
	<string name="evenGame">Even</string>
	<string name="hours">Hours</string>
	<string name="days">Days</string>
	<string name="months">Months</string>
	<string name="submit">Submit</string>
	<string name="messageTitle">Send a message to a user</string>
	<string name="Subject">Subject:</string>
	<string name="From">From:</string>
	<string name="send">Send</string>
	<string name="sending">Sending&#8230;</string>
	<string name="oneTouch">One Touch</string>
	<string name="BoardCoordinates">Coordinates</string>
	<string name="defaultEditMode">Default Edit Mode</string>
	<string name="observedGames">Observed Games</string>
	<string name="captured">Captured</string>
	<string name="KeepScreenOn">Keep Screen On</string>
	<string name="DefaultDir">Default SGF Directory</string>
	<string name="selectTheme">Select Theme</string>
	<string name="BlackOnWhite">Black on White</string>
	<string name="QMark">"?"</string>
	<string name="HandicapFree">Free placement</string>
</resources>